Readme dan db